Cover art service updated